# cmd/server/controller/controller.go
@@ -22,12 +22,24 @@ func NewTransaction(t transactions.Service) *Transaction {
 	}
 }
 
+//Validacion de errores en el request usando validator
 func Mensaje(verr validator.ValidationErrors) []string {
-	//errs := make(map[string]string)
+
 	var errors []string
 	for _, f := range verr {
-		//errs[f.Field()] = fmt.Sprintf("El campo %s es requerido", f.Field())
-		errors = append(errors, fmt.Sprintf("El campo %s es requerido", f.Field()))
+		err := f.ActualTag()
+		// Controlar los params
+		if f.Param() != "" {
+			err = fmt.Sprintf("%s=%s", err, f.Param())
+		}
+		// Dependiendo de cual sea el posible error, voy agregando mensajes personalizados.
+		// Si no lo conozco, simplemente devuelvo "nombre del campo = motivo de la falla" (default)
+		switch err {
+		case "required":
+			errors = append(errors, fmt.Sprintf("El campo %s es requerido", f.Field()))
+		default:
+			errors = append(errors, fmt.Sprintf("%s=%s", f.Field(), err))
+		}
 	}
 	return errors
 }
@@ -106,6 +118,21 @@ func (c *Transaction) NewUser() gin.HandlerFunc {
 	}
 }
 
+// @Summary Update Transaction
+// @Tags Transactions
+// @Description update full transaction
+// @Accept json
+// @Produce json
+// @Param token header string true "token"
+// @Param id path int true "id"
+// @Param codigo body string true "codigo"
+// @Param moneda body string true "moneda"
+// @Param monto body int true "monto"
+// @Param emisor body string true "emisor"
+// @Param receptor body string true "receptor"
+// @Param fecha body string true "fecha"
+// @Success 200 {object} web.Response
+// @Router /{id} [put]
 func (c *Transaction) Update() gin.HandlerFunc {
 	return func(ctx *gin.Context) {
 		type request struct {
